--- a/Indeed_Web_Scraping/indeed/visualization/index.html
+++ b/Indeed_Web_Scraping/indeed/visualization/index.html
@@ -1136,7 +1136,7 @@ svg {
                 <h2>Virginia: 28 job postings</h2>
               </header>
               <main>
-                <img src = 'https://github.com/auroraguorui/Web-Scraping-and-API/blob/master/Indeed_Web_Scraping/indeed/visualization/VA.pdf' height=250 width=400/>
+                <img src = 'https://github.com/auroraguorui/Web-Scraping-and-API/blob/master/Indeed_Web_Scraping/indeed/visualization/VA.jpeg' height=250 width=400/>
               </main>
             </div>
           </div>
