--- a/Indeed_Web_Scraping/indeed/visualization/index.html
+++ b/Indeed_Web_Scraping/indeed/visualization/index.html
@@ -1136,7 +1136,7 @@ svg {
                 <h2>Virginia: 28 job postings</h2>
               </header>
               <main>
-                <img src = 'https://raw.githubusercontent.com/auroraguorui/Web-Scraping-and-API/master/Indeed_Web_Scraping/indeed/visualization/VA.jpg' height=250 width=400/>
+                <img src = 'https://raw.githubusercontent.com/auroraguorui/Web-Scraping-and-API/master/Indeed_Web_Scraping/indeed/visualization/img/VA.jpg' height=250 width=400/>
               </main>
             </div>
           </div>
@@ -1149,7 +1149,7 @@ svg {
                 <h2>Washington: 40 job postings</h2>
               </header>
               <main>
-                <img src = 'WA.pdf' height = 250 width = 400/>
+                <img src = 'img/WA.pdf' height = 250 width = 400/>
               </main>
             </div>
           </div>
