--- a/Indeed_Web_Scraping/indeed/visualization/index.html
+++ b/Indeed_Web_Scraping/indeed/visualization/index.html
@@ -1149,7 +1149,7 @@ svg {
                 <h2>Washington: 40 job postings</h2>
               </header>
               <main>
-                <img src = 'img/WA.pdf' height = 250 width = 400/>
+                <img src = 'img/WA.pdf' alt="hi" class="inline" height = 250 width = 400/>
               </main>
             </div>
           </div>
